tests/NormalTests/paczka2/big_fuzzy/78900575.err
Error in line 2: S843 S843 28,5
Error in line 9: xzo S843 85,7
Error in line 7: N6IZqKS3 A117 52,4
Error in line 23: N6IZqKS3 S843 75,2
Error in line 14: xzo A686 71,2
Error in line 22: 7zCI4S4duF A117 66,0
Error in line 33: 7zCI4S4duF S843 37,0
Error in line 39: z2hB A686 217,3
Error in line 58: tptEF S843 372,6
Error in line 70: S843 A686 6,9
Error in line 72: S843 A968 21,2
Error in line 46: 7zCI4S4duF A117 193,6
Error in line 75: S843 S843 32,0
Error in line 89: N6IZqKS3 A117 23,7
Error in line 110: z2hB S843 92,5
Error in line 112: 7zCI4S4duF A117 40,1
Error in line 119: 7zCI4S4duF S843 70,6
Error in line 125: 7zCI4S4duF A968 23,6
Error in line 129: zlnn A686 60,9
Error in line 130: zlnn A117 11,9
Error in line 138: N6IZqKS3 S843 93,3
Error in line 148: N6IZqKS3 A686 59,3
Error in line 165: z2hB A117 74,5
Error in line 166: z2hB S843 56,6
Error in line 139: zlnn A968 98,4
Error in line 167: z2hB A117 65,0
Error in line 176: z2hB A968 15,7
Error in line 184: tptEF A117 44,4
Error in line 182: xzo A117 98,7
Error in line 198: z2hB A686 99,97
Error in line 188: 7zCI4S4duF A117 180,7
Error in line 202: z2hB A686 466,6
Error in line 210: z2hB A686 23,98
Error in line 206: z2hB A117 96,6
Error in line 212: N6IZqKS3 A968 29,6
Error in line 203: S843 A968 54,1
Error in line 214: zlnn A968 97,2
Error in line 217: zlnn A686 50,0
Error in line 222: zlnn S843 74,3
Error in line 238: N6IZqKS3 S843 87,3
Error in line 236: tptEF A686 56,9
